--- a/AboutUs.html
+++ b/AboutUs.html
@@ -19,7 +19,7 @@
                 <img class="Hamburger" src="Images/All Pages/Hamburger_icon.png">
             <nav class="Navbar">
                 <ul class="Nav-Buttons">
-                    <li><a href="ComicKingHomePage.html">What's Hot?</a></li>
+                    <li><a href="index.html">What's Hot?</a></li>
                     <li class="Current"><a href="AboutUs.html">About Us</a></li>
                     <li><a href="Catalog.html">Comic Catalogue</a></li>
                     <li><a href="">Merchandise</a></li>
