--- a/Contact.html
+++ b/Contact.html
@@ -19,7 +19,7 @@
                 <img class="Hamburger" src="Images/All Pages/Hamburger_icon.png">
             <nav class="Navbar">
                 <ul class="Nav-Buttons">
-                    <li><a href="index.html">What's Hot?</a></li>
+                    <li><a href="ComicKingHomePage.html">What's Hot?</a></li>
                     <li><a href="AboutUs.html">About Us</a></li>
                     <li><a href="Catalog.html">Comic Catalogue</a></li>
                     <li><a href="">Merchandise</a></li>
@@ -40,6 +40,8 @@
                 <h1 class="ContactUs1">Contact Us!</h1>
                 <img class="Raven1" src="Images/Contact/Raven.png" alt="RavenPng">
                 <img class="PhoneHeader" src="Images/Contact/Phone2.png" alt="Phone2">
+                <img class="Boba1" src="Images/Contact/Boba1.png">
+                <img class="Predator1" src="Images/Contact/Predator1.png">
                 
             </div>
 
@@ -51,9 +53,24 @@
             <div class="Main-Container">
                 <div class="CallUs">
                     <div id="Call">Call Us At:</div>
-                    <div id="Number">(780) 478-5694</div>
+                    <div class="PhoneNum">
+                        <img src="Images/Contact/Phone3.png" alt="Phone3">
+                        <div id="Number">(780) 478-5694</div>
+                    </div>
+                    <div id="Hours">Store Hours:</div>
+                    <div class="StoreHours">
+                        <p>Sunday: 12pm - 5pm</p>
+                        <p>Mon, Tues, Sat : 10:30am - 6pm</p>
+                        <p>Wed, Thurs, Fri:  10:30am - 8pm</p>
+                    </div>
                 </div>
+                <div class="WestPromo">
                 <p class="WestSide">WEST SIDE CURRENTLY SEEKING NEW LOCATION ADD US ON FACEBOOK AND INSTAGRAM FOR UPDATES!</p>
+                <div class="Icons">
+                    <img src="Images/Contact/Insta2.png" alt="BlackInsta">
+                    <img src="Images/Contact/Facebook2.png" alt="BlackFacebook">
+                </div>
+            </div>
 
             </div>
 
