--- a/Catalog.html
+++ b/Catalog.html
@@ -19,7 +19,7 @@
                 <img class="Hamburger" src="Images/All Pages/Hamburger_icon.png">
             <nav class="Navbar">
                 <ul class="Nav-Buttons">
-                    <li><a href="index.html">What's Hot?</a></li>
+                    <li><a href="ComicKingHomePage.html">What's Hot?</a></li>
                     <li><a href="AboutUs.html">About Us</a></li>
                     <li class="Current"><a href="Catalog.html">Comic Catalogue</a></li>
                     <li><a href="">Merchandise</a></li>
@@ -41,6 +41,8 @@
                 <img class="Sonic1" src="Images/Catalog/Sonic.png" alt="SonicImage">
                 <img class="Comic1" src="Images/Catalog/BMan Comic.png" alt="BatmanComic">
                 <img class="Comic2" src="Images/Catalog/SMan Comic.png" alt="SupermanComic">
+                <img class="Megaman1" src="Images/Catalog/Megaman1.png">
+                <img class="Hellboy1" src="Images/Catalog/Hellboy1.png">
             </div>
 
             </div>
@@ -152,9 +154,10 @@
                 <div id="Name">Winter Soldier The Longest Winter</div>
                 <div id="Company">Marvel Comics</div>
             </div>
-
-            <button class="NextBut">Next</button>
+            
             <button class="PrevBut">Prev</button>
+            <button class="NextBut">Next</button>
+            
             </div>
 
         </section>
